--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -14,7 +14,15 @@
     background-size: cover;
 }
 
-.format.home_navbar .navbar_config {
+.format_others.home_navbar {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    background: url("/public/others/others_header.png");
+    background-size: cover;
+}
+
+.home_navbar .navbar_config {
     width: 1244.69;
     height: 46px;
     margin-left: 26px;
