feat: homepage topRestaurants section development

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,49 +1,65 @@
 .homepage .static_frame {
-  width: 100%;
-  background: #2c261e;
+    width: 100%;
+    background: #2c261e;
 }
 
 .homepage .personage_img.left {
-  width: 204px;
-  height: 200px;
-  background: url("/public/home/papays.png");
-  transform: matrix(1, 0, 0, 1, 0, 0);
-  background-size: cover;
+    width: 204px;
+    height: 200px;
+    background: url("/public/home/papays.png");
+    transform: matrix(1, 0, 0, 1, 0, 0);
+    background-size: cover;
 }
 
 .homepage .personage_img.right {
-  width: 204px;
-  height: 200px;
-  background: url("/public/home/papays.png");
-  transform: matrix(-1, 0, 0, 1, 0, 0);
-  background-size: cover;
+    width: 204px;
+    height: 200px;
+    background: url("/public/home/papays.png");
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    background-size: cover;
 }
 
 .homepage .static_box {
-  width: 191px;
-  height: 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    width: 191px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .homepage .static_box .static_num {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  font-size: 54px;
-  line-height: 81px;
-  text-align: center;
-  color: #ffffff;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 54px;
+    line-height: 81px;
+    text-align: center;
+    color: #ffffff;
 }
 
 .homepage .static_box .static_text {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  text-align: center;
-  color: #e3c08d;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    text-align: center;
+    color: #e3c08d;
+}
+
+.homepage .top_restaurant_frame {
+    width: 100%;
+    height: 605px;
+    display: flex;
+    background: #0b0e11;
+}
+
+.homepage .category_title {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    color: #e3c08d;
 }
