--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,7 @@
+.homepage {
+    background: #0b0e11;
+}
+
 .homepage .static_frame {
     width: 100%;
     background: #2c261e;
@@ -62,4 +66,11 @@
     font-size: 36px;
     line-height: 42px;
     color: #e3c08d;
+}
+
+.homepage .best_restaurant_frame {
+    width: 100%;
+    height: 775px;
+    display: flex;
+    background: #0b0e11;
 }
