feat: homepage ads section publishing

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -52,6 +52,7 @@
     color: #e3c08d;
 }
 
+/* ******* STARTING TOP_RESTAURANT ************ */
 .homepage .top_restaurant_frame {
     width: 100%;
     height: 605px;
@@ -67,10 +68,133 @@
     line-height: 42px;
     color: #e3c08d;
 }
-
+/* ******* STARTING BEST_RESTAURANT ************ */
 .homepage .best_restaurant_frame {
     width: 100%;
     height: 775px;
     display: flex;
     background: #0b0e11;
 }
+/* ******* ENDING BEST_RESTAURANT ************ */
+
+/* ********* STARTING BEST DISHES************ */
+.homepage .best_dishes_frame {
+    margin-top: 72px;
+    width: 100%;
+    height: 462px;
+    display: flex;
+}
+
+.homepage .dish_box {
+    margin-right: 26px;
+    width: 273px;
+    height: 376px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage .dish_box .dish_img {
+    position: relative;
+    width: 273px;
+    height: 275px;
+    background-size: cover;
+    border-radius: 0px 50px 0px 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.homepage .dish_img .dish_sale {
+    margin-top: 43px;
+    width: 77px;
+    height: 39px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f8be69;
+    box-shadow: 4px 6px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 0px 50px 50px 0px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 21px;
+    color: #ffffff;
+}
+
+.homepage .view_btn {
+    width: 163px;
+    height: 50px;
+    margin-top: 31px;
+    margin-left: 55px;
+    padding-left: 25px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    z-index: 3;
+    opacity: 0;
+    transition: opacity(0.5s ease);
+    background: rgba(28, 23, 23, 0.59);
+    border: 2px solid #b48b50;
+    border-radius: 10px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 13px;
+    line-height: 20px;
+    color: #fff;
+}
+
+.homepage .dish_img:hover .view_btn {
+    opacity: 1;
+}
+
+.homepage .dish_box .dish_desc {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage .dish_desc .dish_title_text {
+    margin-top: 18px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #d1d1d1;
+}
+
+.homepage .dish_desc .dish_desc_text {
+    margin-top: 15px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    color: #e3c08d;
+}
+/* ********* ENDING BEST DISHES************ */
+
+/* ********* STARTING ADVERRTISEMENTS ********* */
+.homepage .ads_restaurant_frame {
+    width: 100%;
+    height: 693px;
+    display: flex;
+    overflow: hidden;
+    box-shadow: 0px -62px 60px 20px rgb(217 217 217 / 40%);
+    margin-top: 186px;
+    background-color: #956dd3;
+}
+
+.homepage .ads_video {
+    width: 100%;
+    background: #0c0e12;
+    display: flex;
+    box-shadow: 0px -8px 90px rgb(215 215 255);
+    transform: scale(1.5);
+    overflow: hidden;
+}
+/* ********* ENDING ADVERRTISEMENTS ********* */
