feat: homepage related publishing finish

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -198,3 +198,292 @@
     overflow: hidden;
 }
 /* ********* ENDING ADVERRTISEMENTS ********* */
+
+/* ********** STARTING EVENTS ************** */
+.homepage .events_frame {
+    margin-top: 45px;
+    width: 100%;
+    height: 700px;
+    display: flex;
+    overflow: hidden;
+}
+
+.homepage .events_main {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.homepage .events_main .events_text {
+    position: relative;
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.homepage .events_main .prev_next_frame {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    height: 24px;
+    margin-left: 901px;
+    margin-top: 19px;
+}
+
+.homepage .dot_frame_pagination {
+    position: relative;
+    width: auto;
+    display: flex;
+    margin-left: 5px;
+}
+
+.homepage .events_main .events_info {
+    margin-top: 75px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.homepage .events_info .events_info_frame {
+    position: relative;
+    width: 579px;
+    height: 447px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.homepage .events_img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    border-radius: 10px;
+    background-size: cover;
+}
+
+.homepage .events_desc {
+    position: absolute;
+    padding: 10px;
+    display: flex;
+    width: 90%;
+    height: auto;
+    bottom: 5px;
+    background: #fff;
+    box-shadow: 0px 40px 30px rgba(25, 25, 46, 0.04);
+    border-radius: 8px;
+}
+
+.homepage .events_desc .events_bott {
+    width: 97%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.homepage .events_desc .events_bott .bott_left {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.homepage .bott_left .event_title_speaker {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* align-items: center; */
+}
+
+.homepage .event_title_speaker .event_organizator {
+    display: flex;
+    align-items: center;
+}
+
+.homepage .event_organizator .spec_text_author {
+    font-family: "GT Walshein Pro";
+    font-style: normal;
+    line-height: 34px;
+    color: #140342;
+}
+
+.homepage .bott_left .text_desc {
+    font-family: "GT Walshein Pro";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 26px;
+    color: #4f547b;
+}
+
+.homepage .bott_left .bott_info {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    width: 100%;
+    height: 16px;
+}
+
+.homepage .bott_info .bott_info_main {
+    margin-left: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: auto;
+    height: 100%;
+    font-family: "GT Walshein Pro";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #4f547b;
+}
+
+.homepage .swiper-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.homepage .swiper-pagination-bullet {
+    margin-right: 5px;
+    width: 8px;
+    height: 8px;
+    text-align: center;
+    opacity: 1;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.homepage .swiper-pagination-bullet-active {
+    background: #007aff;
+    border-radius: 50%;
+}
+/* ********** ENDING EVENTS ************** */
+
+/* ********** STARTING ARTICLE ************** */
+.homepage .top_article_frame {
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+
+.homepage .article_main {
+    margin-top: 32px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.homepage .article_main .article_container {
+    width: 568px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.homepage .article_main .article_category {
+    display: flex;
+    justify-content: center;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 29px;
+    line-height: 44px;
+    color: #fff;
+}
+
+.homepage .article_container .article_box {
+    margin-top: 18px;
+    width: 100%;
+    height: auto;
+    display: flex;
+    border-radius: 20px;
+    flex-direction: row;
+    background: #fff;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.25);
+}
+
+.homepage .article_container .article_news {
+    width: 100%;
+    border-radius: 20px;
+    height: 380px;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    justify-content: center;
+    box-shadow: 0px 4px 40px rgba(83, 38, 208, 0.25);
+}
+
+.homepage .article_box .article_img {
+    width: 150px;
+    height: 153px;
+    border-radius: 0px;
+    background-size: cover;
+    object-fit: contain;
+    background-repeat: no-repeat;
+}
+
+.homepage .article_box .article_info {
+    padding: 10px 0px;
+    width: 318px;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+}
+
+.homepage .article_info .article_main_info {
+    width: 92%;
+    height: 95%;
+}
+
+.homepage .article_main_info .article_author {
+    width: 100%;
+    /* height: 95%; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.homepage .article_author .author_username {
+    margin-left: 10px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #000;
+}
+
+.homepage .article_main_info .article_title {
+    margin-top: 18px;
+    display: flex;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 33px;
+    color: #e3c08d;
+}
+
+.homepage .article_main_info .article_desc {
+    margin-top: 10px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400; 
+    font-size: 14px;
+    line-height: 26px;
+    color: #808080;
+}
+/* ********** ENDING ARTICLE ************** */
