feat: restaurant ecreen develop chosenDish component

--- a/src/css/restaurant.css
+++ b/src/css/restaurant.css
@@ -795,5 +795,72 @@
 
 /************* Starting ChosenDish **************/
 .restaurant_page .chosen_dish_page {
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+
+    background: #0b0e11;
+}
+
+.chosen_dish_page .dish_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.chosen_dish_page .chosen_slider {
+    width: 48%;
+    height: 581px;
+}
+
+.chosen_dish_page .dish_swiper {
+    --swiper-navigation-color: #fff;
+    --swiper-pagination-color: #fff;
+    width: 100%;
+    height: 1020px;
+}
+
+.chosen_dish_page .chosen_dish_info_container {
+    padding: 30px 40px;
+    height: 452px;
+    display: flex;
+    background: #ffffff;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25) inset 0px 4px 4px
+        rgba(0, 0, 0, 0.25) inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 16px;
+}
+
+.chosen_dish_page .chosen_dish_info_container .chosen_dish_info_box {
+    /* margin-top: 30px; */
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.chosen_dish_page .chosen_dish_info_box .dish_txt {
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 36px;
+    color: #000000;
+}
+
+.chosen_dish_page .chosen_dish_info_box .resto_name {
+    margin-top: 16px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 15px;
+    color: #979797;
+}
+
+.chosen_dish_page .chosen_dish_info_box .rating_box {
 }
 /************* Ending ChosenDish **************/
