--- a/src/css/home.css
+++ b/src/css/home.css
@@ -481,9 +481,141 @@
     margin-top: 10px;
     font-family: "Poppins";
     font-style: normal;
-    font-weight: 400; 
+    font-weight: 400;
     font-size: 14px;
     line-height: 26px;
     color: #808080;
 }
 /* ********** ENDING ARTICLE ************** */
+
+/* START BASKET */
+
+.basket_frame {
+    position: relative;
+    padding: 10px 4px 0px 4px;
+    width: 500px;
+    height: auto;
+
+    display: flex;
+    flex-direction: column;
+    background: #ffffff;
+    border-radius: 16px;
+    padding: 0 0 0 10px;
+}
+
+.basket_frame .all_check_box {
+    padding: 0px 6px;
+    width: 100%;
+    height: 35px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: #d9d9d9;
+    border-width: 1px 0px;
+    border-style: solid;
+    border-color: #939393;
+}
+
+.basket_frame .basket_info_box {
+    position: relative;
+    margin-top: 6px;
+    width: 100%;
+    height: auto;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.basket_info_box .product_img {
+    width: 60px;
+    height: 60px;
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 29px;
+}
+
+.basket_info_box .product_name {
+    margin-left: 11px;
+    width: 185px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #000000;
+}
+
+.basket_info_box .product_price {
+    width: 80px;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    color: #ae0000;
+}
+
+.basket_info_box
+    .css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input {
+    padding: 6.5px 14px;
+}
+
+.basket_info_box .css-ece9u5 {
+    min-width: 72px;
+}
+
+.basket_frame .cancel_btn {
+    position: absolute;
+    top: 33%;
+    right: 5%;
+    cursor: pointer;
+}
+
+.basket_frame .to_order_box {
+    margin-top: 10px;
+    width: 100%;
+    height: 64px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.to_order_box .price_text {
+    margin-left: 27px;
+    margin-right: 10px;
+    width: 200px;
+    display: flex;
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #000000;
+}
+
+.basket_frame .orders_wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+.basket_frame .orders_main_wrapper {
+    position: relative;
+    overflow: hidden;
+    margin-top: 10px;
+    width: 100%;
+    height: 260px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+/* END BASKET */
