--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -96,6 +96,20 @@
     color: #d5d5d5;
 }
 
+.home_navbar .blue-btn {
+    color: #1976d2;
+    border: 1.5px solid #1976d2;
+    border-radius: 7px;
+}
+
+.home_navbar .blue-btn:hover {
+    background-color: #1976d2;
+    color: #050801;
+    box-shadow: 0px 0px 5px #03e9f4, 0px 0px 5px #1976d2, 0px 0px 10px #03e9f4,
+        0px 0px 100px #1976d2;
+    -webkit-box-reflect: below 5px linear-gradient(transparent, #0005);
+}
+
 .home_navbar .big_img {
     position: relative;
     width: 277px;
