--- a/src/css/order.css
+++ b/src/css/order.css
@@ -51,7 +51,7 @@
     height: 112px;
     flex-shrink: 0;
     border-radius: 37px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25); */
     margin-bottom: 10px;
 }
 
