--- a/src/css/my_page.css
+++ b/src/css/my_page.css
@@ -71,7 +71,7 @@
 .all_article_desc {
     color: #fff;
     font-family: "Poppins";
-    font-size: 16px;
+    font-size: 13px;
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
@@ -83,13 +83,13 @@
     font-size: 22px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
+    line-height: 40px;
 }
 
 .my_page .my_page_frame .all_article_box .article_share {
     display: flex;
     margin-left: 150px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 /********************* ending memberPosts ************************/
 
