--- a/src/css/my_page.css
+++ b/src/css/my_page.css
@@ -188,10 +188,9 @@
 }
 
 .my_page .my_page_menu .menu_box {
-    width: auto;
+    width: 98%;
     height: 50px;
-    flex-shrink: 0;
-    border-radius: 20px;
+    border-radius: 10px;
     background: #fff;
     box-shadow: 0px 4px 16px 0px rgba(242, 189, 87, 0.04) inset,
         0px 4px 4px 0px rgba(0, 0, 0, 0.25) inset,
@@ -201,6 +200,7 @@
     justify-content: center;
     margin-top: 10px;
     column-gap: 20px;
+    cursor: pointer;
 }
 
 .my_page .my_page_right .my_page_menu span {
